# services/retail-ec/src/main/java/com/example/inventory/retail/domain/model/Order.java
@@ -82,6 +82,7 @@ public final class Order {
                                                 new OrderPlacedEvent.Line(
                                                         i.lineNo(),
                                                         i.skuCode(),
+                                                        i.locationId(),
                                                         i.quantity(),
                                                         i.unitPrice()))
                                 .collect(Collectors.toList()),
